--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 
 
 <nav>
-<a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/Index.html">Home</a> 
+<a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/index.html">Home</a> 
 <a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/menu.html" class="active">Menu</a>
 <a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/order.html">Order</a>
 </nav>
@@ -77,4 +77,5 @@
 
 
 </body>
+
 </html>
