--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
 </header>
 
 <nav>
-<a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/Index.html">Home</a> 
+<a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/index.html">Home</a> 
 <a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/menu.html" class="active">Menu</a>
 <a href="file:///C:/Users/lyoung/Documents/Web%20Page%20Design/14%20-%20Chat%20GPT/order.html">Order</a>
 </nav>
@@ -148,4 +148,5 @@ foodSelect.addEventListener("change", function() {
 </script>
 
 </body>
+
 </html>
